@@ -12,6 +12,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2953050 [export] export VIEW as SQL includes INSERT statement 
 - bug #2942032 [core] Cannot detect PmaAbsoluteUri correctly on Windows 
 - bug #2961609 [auth] Potential information disclosure at login page
+- patch #2961540 [export] Do not export data of MERGE table,
+  thanks to Dieter Adriaenssens - ruleant
 
 3.3.0.0 (not yet released)
 + rfe #2308632 [edit] Use hex for (var)binary fields,
